--- a/assets/global.scss
+++ b/assets/global.scss
@@ -50,3 +50,17 @@ $font-size-root: 20px;
   padding: 4px;
   color: red;
 }
+
+
+
+/* Change the white to any color ;) */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #424242 inset !important;
+}
+
+input:-webkit-autofill {
+  -webkit-text-fill-color: white !important;
+}
